:bug: Fix colour contrast issues

--- a/src/styles/variables/colors.sass
+++ b/src/styles/variables/colors.sass
@@ -4,7 +4,7 @@ $color-accent-grey: #bbc6b8
 $color-accent-blue: #a4bcb0
 $color-accent-pink: #830052
 
-$color-primary: #7b7d7e
+$color-primary: #696a6b
 $color-background: white
 $color-secondary: $color-accent-blue
 
